0.2.2
- Fixed opening via dialog crashes IntelliJ (mac) (#issue 22)

0.2.1 (2019-08-22)
- Minor GUI improvements
- Context aware popup menu
- Go-to dialog position to support position from end (issue #14)
- Go-to dialog position to support different numerical bases (issue #11)
- Support for ENTER key in preview section
- Minor fix to view of native Java debug values
- Minor fix to integration (issues #7, #18)

0.2.0 (2019-04-13)
- Renamed to BinEd
- Updated to newer version of library
- Support for half-size space
- Support for layout, theme and colors profiles
- Added support for different numerical bases in status bar (issue #13)
- Configurable address margin (issue #12)
- Fixed issue with copy as code for debug view (issue #20)

0.1.7 (2018-08-24)
- Fixed issue with debugging in CLion (issue #4)
- Fixed issue with goto does not scrolling window (issue #5)
- Added basic support for debug view of bytearray and bytes for Python

0.1.6.1 (2018-03-07)
- Fixed issue with byte array / NPE

0.1.6 (2018-03-05)
- Added "Show as hex" action for debugger (native types and native arrays only)
- Show "Document changed" dialog on window close
- Fixed Unknown property name: 'modified' (issue #3)

0.1.5 (2017-10-10)
- Values panel made editable
- Byte order support for floating point numbers in values panel (issue #2)
- Added thread for values panel updating
- Fixed files closing on window closing
- Fixed clipboard charset translation

0.1.4 (2017-04-01)
- Fixed behavior for high precision wheel scrolling
- Fixed loading after custom font saved
- Fixed opening of read-only files

0.1.3 (2017-03-22)
- Added options dialog
- Added values side panel
- Added "File/Open File as Hex" action
- Code colorization by byte value
- Some minor fixes

0.1.2 (2017-02-04)
- Fixed issue in Android Studio 2.2.3 (issue #1)
- Fixed issue with saving in delta mode

0.1.1 (2017-01-11)
- Fixed issue on Android Studio
- Added status panel
- Added go-to position dialog
- Added crude search panel