@@ -20,6 +20,7 @@ import com.intellij.openapi.fileEditor.FileEditor;
 import com.intellij.openapi.fileEditor.FileEditorPolicy;
 import com.intellij.openapi.fileEditor.FileEditorProvider;
 import com.intellij.openapi.fileEditor.FileEditorState;
+import com.intellij.openapi.project.DumbAware;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.vfs.VirtualFile;
 import org.jdom.Element;
@@ -31,7 +32,7 @@ import org.jetbrains.annotations.NotNull;
  * @author ExBin Project (http://exbin.org)
  * @version 0.2.1 2019/08/22
  */
-public class BinEdFileEditorProvider implements FileEditorProvider {
+public class BinEdFileEditorProvider implements FileEditorProvider, DumbAware {
 
     public static final String BINED_EDITOR_TYPE_ID = "org.exbin.bined";
 
